--- a/index.html
+++ b/index.html
@@ -57,12 +57,13 @@
           <li class="active"><a href="./index.html">Home</a></li>
           <li><a href="./shoping-cart.html">Shopping Cart</a></li>
           <li><a href="./contact.html">Contact</a></li>
+          <li><a href="./aboutdev.html">About Developers</a></li>
         </ul>
       </nav>
       <div id="mobile-menu-wrap"></div>
       <div class="humberger__menu__contact">
         <ul>
-          <li><h6>About Developer</h6></li>
+          <li><h6>Contact Developer</h6></li>
           <li><i class="fa fa-envelope"></i> andharikar.a11@gmail.com</li>
           <li><i class="fa fa-phone"></i> +91 83298 11873</li>
         </ul>
@@ -167,7 +168,7 @@
                 font-size: 34px;
                 padding-bottom: 0px;
                 margin-bottom: 0px;
-                align-self:baseline;
+                align-self: baseline;
                 font-weight: 600;
               "
             >
@@ -207,7 +208,7 @@
                 color: white;
                 padding-bottom: 0px;
                 margin-bottom: 0px;
-                align-self:baseline;
+                align-self: baseline;
                 font-size: 34px;
                 font-weight: 600;
               "
@@ -935,14 +936,12 @@
             <div class="footer__widget">
               <h6>Useful Links</h6>
               <ul>
-                <li><a href="./whoweare.html">Who We Are</a></li>
                 <li><a href="./aboutdev.html">About Developers</a></li>
                 <li><a href="./contact.html">Delivery infomation</a></li>
               </ul>
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./shoping-cart.html">Shopping Cart</a></li>
-                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
