--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -45,12 +45,13 @@
             <a href="./shoping-cart.html">Shopping Cart</a>
           </li>
           <li><a href="./contact.html">Contact</a></li>
+          <li class="active"><a href="./aboutdev.html">About Developers</a></li>
         </ul>
       </nav>
       <div id="mobile-menu-wrap"></div>
       <div class="humberger__menu__contact">
         <ul>
-          <li><h6>About Developer</h6></li>
+          <li><h6>Contact Developer</h6></li>
           <li><i class="fa fa-envelope"></i> andharikar.a11@gmail.com</li>
           <li><i class="fa fa-phone"></i> +91 83298 11873</li>
         </ul>
@@ -173,14 +174,12 @@
             <div class="footer__widget">
               <h6>Useful Links</h6>
               <ul>
-                <li><a href="./whoweare.html">Who We Are</a></li>
                 <li><a href="./aboutdev.html">About Developers</a></li>
                 <li><a href="./contact.html">Delivery infomation</a></li>
               </ul>
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./shoping-cart.html">Shopping Cart</a></li>
-                <li><a href="./contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
