--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
     <br>
     <section style="margin: auto;width: 50%;padding: 10px;">
 <div class="hero__search__phone__icon">
-  <a href="tel:W919011935446">
+  <a href="tel:9011935446">
     <i class="fa fa-phone fa-2x"></i
   ></a>
 </div>
