--- a/aboutdev.html
+++ b/aboutdev.html
@@ -120,7 +120,7 @@
           </div>
           <!--Content-->
           <h4 class="font-weight-bold dark-grey-text mt-4">Aniket Andharikar</h4>
-          <h6 class="font-weight-bold blue-text my-3" style="color: #ff914d;">Web Developer</h6>
+          <h6 class="font-weight-bold blue-text my-3" style="color: #ff914d;">Backend Developer</h6>
           <h6 class="font-weight-bold blue-text my-3" style="color: #ff914d;"><a href="tel:8329811873">
             <i class="fa fa-phone"></i
           >&nbsp; 8329811873</a></h6>
