--- a/contact.html
+++ b/contact.html
@@ -130,8 +130,8 @@
 </div>
 </div>
     </section>
-    <section style="margin: auto;width: 50%;padding: 10px;>
-      <div class="hero__search__phone"">
+    <section style="margin: auto;width: 50%;padding: 10px;">
+      <div class="hero__search__phone">
         <div class="hero__search__phone__icon">
           <a
             href="https://wa.me/919623413148?text=I'm%20interested%20in%20your%20Quick%20N%20Fresh%20for%20purchasing"
@@ -217,9 +217,12 @@
                             <a href="./index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                         <ul>
-                            <li>Phone: +91 83298 11873</li>
-                            <li>Email: andharikar.a11@gmail.com</li>
-                        </ul>
+                          <li>Quick N Fresh Mart</li>
+                          <li>Gaurav Powar</li>
+                          <li>Phone: +91 9623413148</li>
+                          <li>Sumit Nyayadhish</li>
+                          <li>Phone: +91 9309868562</li>
+                      </ul>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
