--- a/index.html
+++ b/index.html
@@ -933,9 +933,12 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>Phone: +91 83298 11873</li>
-                <li>Email: andharikar.a11@gmail.com</li>
-              </ul>
+                <li>Quick N Fresh Mart</li>
+                <li>Gaurav Powar</li>
+                <li>Phone: +91 9623413148</li>
+                <li>Sumit Nyayadhish</li>
+                <li>Phone: +91 9309868562</li>
+            </ul>
             </div>
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-1">
