--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Radish (White)','10','kg','1')"
+                        onclick="addproduct('Radish (White)','20','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -772,7 +772,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Corriander','20','kg','1')"
+                        onclick="addproduct('Corriander','20','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -787,7 +787,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Fenugreek','15','kg','1')"
+                        onclick="addproduct('Fenugreek','15','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -802,7 +802,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Spinach','15','kg','1')"
+                        onclick="addproduct('Spinach','15','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -817,7 +817,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Green Sorrel (ambat chuka)','15','kg','1')"
+                        onclick="addproduct('Green Sorrel (ambat chuka)','15','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -832,7 +832,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Spring Onion','10','kg','1')"
+                        onclick="addproduct('Spring Onion','10','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -907,7 +907,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Kardai','15','kg','1')"
+                        onclick="addproduct('Kardai','15','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
