Done Final Edit

--- a/index.html
+++ b/index.html
@@ -933,7 +933,7 @@
                 <a href="./index.html"><img src="img/logo.png" alt="" /></a>
               </div>
               <ul>
-                <li>Quick N Fresh Mart</li>
+                <li><b>Quick N Fresh Mart</b></li>
                 <li>Gaurav Powar</li>
                 <li>Phone: +91 9623413148</li>
                 <li>Sumit Nyayadhish</li>
