--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
     </section>
     <br>
   <section class="contact spad" >
-    <div class="breadcrumb__texter">
+    <div class="breadcrumb__texter" style="padding-left:70px ;padding-bottom:0px ;margin-bottom: 0px;">
 <div class="hero__search__phone__icon" >
   <a href="tel:9309868562">
     <i class="fa fa-phone fa-2x" ></i
@@ -129,9 +129,8 @@
   <h5>Call Us!</h5>
   <span>10 AM - 6 PM</span>
 </div>
-
-<br><br>
-    
+<br>
+    <br><br>
         <div class="hero__search__phone__icon">
           <a href="https://wa.me/919623413148?text=I'm%20interested%20in%20your%20Quick%20N%20Fresh%20for%20purchasing">
             <i class="fa fa-whatsapp fa-2x" style="color: #25d366;"></i></a>
@@ -144,7 +143,6 @@
       </section>
 
     <!-- Breadcrumb Section End -->
-    <br><br><br><br><br>
     <!-- Contact Section Begin -->
     
     <section class="contact spad" id="ourdelivery">
@@ -208,7 +206,7 @@
                             <a href="./index.html"><img src="img/logo.png" alt=""></a>
                         </div>
                         <ul>
-                          <li>Quick N Fresh Mart</li>
+                          <li><b>Quick N Fresh Mart</b></li>
                           <li>Gaurav Powar</li>
                           <li>Phone: +91 9623413148</li>
                           <li>Sumit Nyayadhish</li>
