--- a/contact.html
+++ b/contact.html
@@ -179,7 +179,7 @@
                        <p>Sigma Hospital area</p><br>
                        <p>Roplekar Hospital area</p><br>
                        <p>Jyoti Nagar</p><br>
-                       <p>Shrey Nagar</p>
+                       <p>Shreya Nagar</p>
                     </div>
                 </div>
             </div>
