--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -141,6 +141,12 @@
             Total Amount
           </button>
           <br />
+          <br>
+          <a href="./index.html" class="primary-btn text-center" >
+            Continue Shopping
+          </a>
+          <br>
+          <br>
           <div
             id="totalvalue"
             class="text-center"
