--- a/index.html
+++ b/index.html
@@ -270,11 +270,11 @@
                       <img src="img/all/desi_tomatoes.png" alt="" />
                     </td>
                     <td><h5>Vaishali Tomato</h5></td>
-                    <td class="shoping__cart__price">₹35.00</td>
+                    <td class="shoping__cart__price">₹40.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Vaishali Tomato','35','kg','1')"
+                        onclick="addproduct('Vaishali Tomato','40','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -286,7 +286,7 @@
                       <img src="img/all/potatoes.png" alt="" />
                     </td>
                     <td><h5>Potato</h5></td>
-                    <td class="shoping__cart__price">₹40.00</td>
+                    <td class="shoping__cart__price">₹.00</td>
                     <td>
                       <a
                         href="./index.html"
@@ -346,11 +346,11 @@
                       <img src="img/all/shimala.png" alt="" />
                     </td>
                     <td><h5>Shimla (Large)</h5></td>
-                    <td class="shoping__cart__price">₹65.00</td>
+                    <td class="shoping__cart__price">₹80.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Shimla (Large)','65','kg','1')"
+                        onclick="addproduct('Shimla (Large)','80','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -361,11 +361,11 @@
                       <img src="img/all/rsz_capsicum.png" alt="" />
                     </td>
                     <td><h5>Shimla (Medium)</h5></td>
-                    <td class="shoping__cart__price">₹60.00</td>
+                    <td class="shoping__cart__price">₹80.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Shimla (Medium)','60','kg','1')"
+                        onclick="addproduct('Shimla (Medium)','80','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -376,11 +376,11 @@
                       <img src="img/all/chilly.png" alt="" />
                     </td>
                     <td><h5>Chilly (Kakdi Mirch)</h5></td>
-                    <td class="shoping__cart__price">According to Stock</td>
+                    <td class="shoping__cart__price">₹80.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Chilly (Kakdi Mirch)','0','kg','1')"
+                        onclick="addproduct('Chilly (Kakdi Mirch)','80','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -391,11 +391,11 @@
                       <img src="img/all/chilly.png" alt="" />
                     </td>
                     <td><h5>Green Chilly</h5></td>
-                    <td class="shoping__cart__price">₹50.00</td>
+                    <td class="shoping__cart__price">₹60.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Green Chilly','50','kg','1')"
+                        onclick="addproduct('Green Chilly','60','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -665,7 +665,7 @@
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Radish (White)','20','kg','1')"
+                        onclick="addproduct('Radish (White)','20','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -706,11 +706,11 @@
                       <img src="img/all/arvi.png" alt="" />
                     </td>
                     <td><h5>Taro Root (Arvi)</h5></td>
-                    <td class="shoping__cart__price">According to Stock</td>
+                    <td class="shoping__cart__price">₹50.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Taro Root (Arvi)','0','kg','1')"
+                        onclick="addproduct('Taro Root (Arvi)','50','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -843,11 +843,11 @@
                       <img src="img/featured/feature-1.jpg" alt="" />
                     </td>
                     <td><h5>Cabbage</h5></td>
-                    <td class="shoping__cart__price">₹60.00</td>
+                    <td class="shoping__cart__price">₹40.00</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Cabbage','60','kg','1')"
+                        onclick="addproduct('Cabbage','40','kg','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -888,7 +888,7 @@
                       <img src="img/featured/feature-7.jpg" alt="" />
                     </td>
                     <td><h5>Coriander</h5></td>
-                    <td class="shoping__cart__price">₹10.00</td>
+                    <td class="shoping__cart__price">₹20.00</td>
                     <td>
                       <a
                         href="./index.html"
