--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -176,7 +176,7 @@
 
 <br><br>
         
-          <button onclick="Message_generator()" class="primary-btn">
+           <button class="primary-btn"> <!-- onclick="Message_generator()" > -->
             PROCEED TO CHECKOUT
           </button>
         </div>
