--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                       <img src="img/all/potatoes.png" alt="" />
                     </td>
                     <td><h5>Potato</h5></td>
-                    <td class="shoping__cart__price">₹.00</td>
+                    <td class="shoping__cart__price">₹40.00</td>
                     <td>
                       <a
                         href="./index.html"
@@ -903,7 +903,7 @@
                       <img src="img/all/kardai.png" alt="" />
                     </td>
                     <td><h5>Kardai</h5></td>
-                    <td class="shoping__cart__price">₹15.00</td>
+                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹15.00</td>
                     <td>
                       <a
                         href="./index.html"
@@ -934,7 +934,7 @@
               </div>
               <ul>
                 <li><b>Quick N Fresh Mart</b></li>
-                <li>Gaurav Powar</li>
+                <li>Gaurav Pawar</li>
                 <li>Phone: +91 9623413148</li>
                 <li>Sumit Nyayadhish</li>
                 <li>Phone: +91 9309868562</li>
