--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -195,7 +195,7 @@
               </div>
               <ul>
                 <li><b>Quick N Fresh Mart</b></li>
-                <li>Gaurav Powar</li>
+                <li>Gaurav Pawar</li>
                 <li>Phone: +91 9623413148</li>
                 <li>Sumit Nyayadhish</li>
                 <li>Phone: +91 9309868562</li>
