--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
                       <img src="img/all/kardai.png" alt="" />
                     </td>
                     <td><h5>Kardai</h5></td>
-                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹15.00</td>
+                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹15.00<br>per Bunch</td>
                     <td>
                       <a
                         href="./index.html"
