--- a/index.html
+++ b/index.html
@@ -768,11 +768,11 @@
                       <img src="img/all/corriander.png" alt="" />
                     </td>
                     <td><h5>Corriander</h5></td>
-                    <td class="shoping__cart__price">₹20.00</td>
+                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹15.00<br>per Kg</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Corriander','20','bunch','1')"
+                        onclick="addproduct('Corriander','15','bunch','1')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
