--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
                       <img src="img/all/radish.png" alt="" />
                     </td>
                     <td><h5>Radish (White)</h5></td>
-                    <td class="shoping__cart__price">₹10.00</td>
+                    <td class="shoping__cart__price">₹10.00<br>per Bunch</td>
                     <td>
                       <a
                         href="./index.html"
