--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <div class="humberger__menu__contact">
         <ul>
           <li><h6>Contact Developer</h6></li>
-          <li><i class="fa fa-envelope"></i> andharikar.a11@gmail.com</li>
+          <li><i class="fa fa-envelope"></i> techsynac@gmail.com</li>
           <li><i class="fa fa-phone"></i> +91 83298 11873</li>
         </ul>
       </div>
