--- a/shoping-cart.html
+++ b/shoping-cart.html
@@ -176,7 +176,7 @@
 
 <br><br>
         
-           <button class="primary-btn" ><!--onclick="Message_generator()" >-->
+           <button class="primary-btn" onclick="Message_generator()" >
             PROCEED TO CHECKOUT
           </button>
         </div>
