--- a/index.html
+++ b/index.html
@@ -318,11 +318,11 @@
                       <img src="img/all/cauliflower.png" alt="" />
                     </td>
                     <td><h5>Cauliflower (Medium)</h5></td>
-                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹30.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹20.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Cauliflower (Medium)','30','kg','0.5')"
+                        onclick="addproduct('Cauliflower (Medium)','20','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -333,11 +333,11 @@
                       <img src="img/all/shimala.png" alt="" />
                     </td>
                     <td><h5>Shimla (Large)</h5></td>
-                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹45.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹30.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Shimla (Large)','45','kg','0.5')"
+                        onclick="addproduct('Shimla (Large)','30','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -348,11 +348,11 @@
                       <img src="img/all/rsz_capsicum.png" alt="" />
                     </td>
                     <td><h5>Shimla (Medium)</h5></td>
-                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹40.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹25.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Shimla (Medium)','40','kg','0.5')"
+                        onclick="addproduct('Shimla (Medium)','25','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -378,11 +378,11 @@
                       <img src="img/all/chilly.png" alt="" />
                     </td>
                     <td><h5>Green Chilly</h5></td>
-                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹25.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹15.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Green Chilly','25','kg','0.5')"
+                        onclick="addproduct('Green Chilly','15','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -393,11 +393,11 @@
                       <img src="img/all/bhendi.png" alt="" />
                     </td>
                     <td><h5>Okra (Medium)</h5></td>
-                    <td class="shoping__cart__price"><del>₹30.00</del><br>₹25.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹30.00</del><br>₹15.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Okra (Medium)','25','kg','0.5')"
+                        onclick="addproduct('Okra (Medium)','15','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -408,11 +408,11 @@
                       <img src="img/all/kerela.png" alt="" />
                     </td>
                     <td><h5>Bitter Gourd</h5></td>
-                    <td class="shoping__cart__price"><del>₹40.00</del><br>₹30.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹40.00</del><br>₹20.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Bitter Gourd','30','kg','0.5')"
+                        onclick="addproduct('Bitter Gourd','20','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -453,11 +453,11 @@
                       <img src="img/all/dodka.png" alt="" />
                     </td>
                     <td><h5>Ridge Gourd (Dodka)</h5></td>
-                    <td class="shoping__cart__price"><br>₹35.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><br>₹20.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Ridge Gourd (Dodka)','35','kg','0.5')"
+                        onclick="addproduct('Ridge Gourd (Dodka)','20','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -468,11 +468,11 @@
                       <img src="img/all/gilka.png" alt="" />
                     </td>
                     <td><h5>Gilka</h5></td>
-                    <td class="shoping__cart__price"><del>₹70.00</del><br>₹35.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹25.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Gilka','35','kg','0.5')"
+                        onclick="addproduct('Gilka','25','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -483,11 +483,11 @@
                       <img src="img/all/bhopla.png" alt="" />
                     </td>
                     <td><h5>Bottle Gourd</h5></td>
-                    <td class="shoping__cart__price"><del>₹45.00</del><br>₹30.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹45.00</del><br>₹20.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Bhopla','30','kg','0.5')"
+                        onclick="addproduct('Bhopla','20','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -498,11 +498,11 @@
                       <img src="img/all/garlic.png" alt="" />
                     </td>
                     <td><h5>Garlic</h5></td>
-                    <td class="shoping__cart__price"><del>₹90.00</del><br>₹60.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹45.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Garlic','60','kg','0.5')"
+                        onclick="addproduct('Garlic','45','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -513,11 +513,11 @@
                       <img src="img/all/beans.png" alt="" />
                     </td>
                     <td><h5>Beans</h5></td>
-                    <td class="shoping__cart__price"><del>₹100.00</del><br>₹60.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹60.00</del><br>₹45.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Beans','60','kg','0.5')"
+                        onclick="addproduct('Beans','45','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -528,11 +528,11 @@
                       <img src="img/all/lemon.png" alt="" />
                     </td>
                     <td><h5>Lemon</h5></td>
-                    <td class="shoping__cart__price"><del>₹25.00</del><br>₹15.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹25.00</del><br>₹10.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Lemon','15','kg','0.5')"
+                        onclick="addproduct('Lemon','10','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -588,11 +588,11 @@
                       <img src="img/all/gawar.png" alt="" />
                     </td>
                     <td><h5>Cluster Beans (Guar)</h5></td>
-                    <td class="shoping__cart__price">₹35.00 <br/>per 500gram</td>
+                    <td class="shoping__cart__price">₹30.00 <br/>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Cluster Beans (Guar)','35','kg','0.5')"
+                        onclick="addproduct('Cluster Beans (Guar)','30','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -619,11 +619,11 @@
                       <img src="img/all/dangar.png" alt="" />
                     </td>
                     <td><h5>Red Pumpkin</h5></td>
-                    <td class="shoping__cart__price"><del>₹17.50</del><br>₹15.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹17.50</del><br>₹10.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Red Pumpkin','15','kg','0.5')"
+                        onclick="addproduct('Red Pumpkin','10','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -634,11 +634,11 @@
                       <img src="img/all/chaki.png" alt="" />
                     </td>
                     <td><h5>White Pumpkin (Chaki)</h5></td>
-                    <td class="shoping__cart__price"><del>₹45.00</del><br>₹25.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹35.00</del><br>₹15.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('White Pumpkin (Chaki)','25','kg','0.5')"
+                        onclick="addproduct('White Pumpkin (Chaki)','15','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -743,11 +743,11 @@
                       <img src="img/all/spring.png" alt="" />
                     </td>
                     <td><h5>Spring Onion</h5></td>
-                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹15.00<br>per Bunch</td>
+                    <td class="shoping__cart__price"><del>₹20.00</del><br>₹12.00<br>per Bunch</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Spring Onion','15','bunch','0.5')"
+                        onclick="addproduct('Spring Onion','12','bunch','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -758,11 +758,11 @@
                       <img src="img/featured/feature-1.jpg" alt="" />
                     </td>
                     <td><h5>Cabbage</h5></td>
-                    <td class="shoping__cart__price"><del>₹40.00</del><br>₹35.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹40.00</del><br>₹20.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Cabbage','35','kg','0.5')"
+                        onclick="addproduct('Cabbage','20','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -773,11 +773,11 @@
                       <img src="img/all/ambadi.png" alt="" />
                     </td>
                     <td><h5>Ambadi</h5></td>
-                    <td class="shoping__cart__price"><del>₹15.00</del><br>₹10.00<br>per Bunch</td>
+                    <td class="shoping__cart__price"><del>₹15.00</del><br>₹8.00<br>per Bunch</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Ambadi','10','bunch','0.5')"
+                        onclick="addproduct('Ambadi','8','bunch','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -835,11 +835,11 @@
                       <img src="img/all/ginger.png" alt="" />
                     </td>
                     <td><h5>Ginger (Old)</h5></td>
-                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹25.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹50.00</del><br>₹22.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Ginger (Old)','25','kg','0.5')"
+                        onclick="addproduct('Ginger (Old)','22','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
@@ -865,7 +865,8 @@
                       <img src="img/all/ratala.png" alt="" />
                     </td>
                     <td><h5>Sweet Potato</h5></td>
-                    <td class="shoping__cart__price"><del>₹30.00</del><br>₹25.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"> Not Available
+                      <!-- <del>₹30.00</del><br>₹25.00<br>per 500gram</td> -->
                     <td>
                       <a
                         href="./index.html"
@@ -895,11 +896,11 @@
                       <img src="img/all/beet.png" alt="" />
                     </td>
                     <td><h5>Beet</h5></td>
-                    <td class="shoping__cart__price"><del>₹30.00</del><br>₹20.00<br>per 500gram</td>
+                    <td class="shoping__cart__price"><del>₹30.00</del><br>₹15.00<br>per 500gram</td>
                     <td>
                       <a
                         href="./index.html"
-                        onclick="addproduct('Beet','20','kg','0.5')"
+                        onclick="addproduct('Beet','15','kg','0.5')"
                         ><i class="fa fa-shopping-cart fa-2x"></i>
                         <span id="cartvalue"></span>
                       </a>
